--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     color: #f4f4f9;
     background-color: #0a0a0a;
-    overflow: hidden;
+    overflow-x: hidden;
     position: relative;
 }
 
@@ -15,7 +15,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: -1;
-    background: linear-gradient(135deg, #1f1c18 0%, #8e44ad 100%);
+    background: linear-gradient(135deg, #000000 0%, #434343 100%);
     opacity: 0.8;
 }
 
