--- a/styles.css
+++ b/styles.css
@@ -295,9 +295,8 @@ section h2 {
     transform: scale(1.05);
 }
 
-.linkedin-link img {
-    width: 30px;
-    height: 30px;
+.linkedin-link i {
+    font-size: 30px;
     margin-right: 10px;
 }
 
